2007-07-03  Robert Widhopf-Fenk  <fenk@forwiss.de>

	* lisp/bbdb-gnus.el (bbdb/gnus-summary-get-author): Added handling
	of `gnus-ignored-from-addresses' and `gnus-summary-to-prefix'.

2007-05-12  Robert Widhopf-Fenk  <bbdb@robf.de>

	* lisp/bbdb-com.el (bbdb-define-all-aliases): Rewrite to handle
	magic aliases which expand to all nets of a records when ending in
	"*", pick the nth net of a records when ending in "[NTH]" and
	recursively expanding aliases if a net has no "@" and exists as
	alias.

2007-03-04  Robert Widhopf-Fenk  <bbdb@robf.de>

	* lisp/bbdb.el (bbdb-pop-up-bbdb-buffer): Rewrote the function to
	use PREDICATE regardless of the split mode selected by
	`bbdb-use-pop-up'.
	
	`bbdb-use-pop-up' can be used to select the split mode.  

	Also added the new variable `bbdb-pop-up-target-columns' which is
	the number of columns for the BBDB buffer window when splitting
	vertically.  

2007-02-18  Robert Widhopf-Fenk  <bbdb@robf.de>

	* lisp/bbdb.el (bbdb-quiet-about-name-mismatches): Can be
	a function or sexp to allow user tweak-able name updates.  

2007-02-14  Robert Widhopf-Fenk  <fenk@forwiss.de>

	* lisp/bbdb.el (bbdb-use-pop-up): Changed the default to 'horiz.
	(bbdb-pop-up-display-layout):  Changed the default to 'one-line.
	Some code linting here and there.

	* lisp/bbdb-com.el (bbdb-complete-name-allow-cycling): changed
	default to t.
	(bbdb-get-only-first-address-p): changed default to nil.
	(bbdb-get-addresses): Added a doc string.

2007-02-06  Robert Widhopf-Fenk  <bbdb@robf.de>

	* Added support for completion on "lastname firstname".  Before
	completion only worked on "first lastname". Eventually one will
	get more choices now!  The order of "firstname lastname" in the
	completions buffer is still preserved, which might look a bit
	odd. 

2007-02-03  Tom Tromey  <tromey@redhat.com>

	* lisp/Makefile.in (bbdb-hooks.elc): Put lisp on a single line.

2007-01-01  Waider  <waider@waider.ie>

	* lisp/bbdb.el: